AC_INIT([libbtree], [1.0], [wastegas@gmail.com])
AM_PROG_AR
LT_INIT
AC_CHECK_HEADERS([include/btree.h])
AC_CONFIG_SRCDIR([src/btree.cc])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([subdir-objects  -Wall -Werror])
AC_CONFIG_FILES([Makefile])
AC_CONFIG_MACRO_DIR([m4])
AC_ENABLE_SHARED
AC_DISABLE_STATIC
AC_PROG_CXX
AC_LANG([C++])
AX_CXX_COMPILE_STDCXX_11
AC_OUTPUT
